Create header files; implement loading and reading data files; create data files for text, color and vertex positions; load more fonts; add more text; fix letter spacing

--- a/src/Makefile
+++ b/src/Makefile
@@ -2,7 +2,7 @@ CC=g++
 CFLAGS=-c -Wall -std=c++17 
 LDFLAGS=
 LIBFLAGS=-lsfml-graphics -lsfml-window -lsfml-system
-SOURCES=WS4.cpp
+SOURCES=WS4.cpp gfx_init.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=WS4
 BINDIR=/usr/bin
