--- a/src/Makefile
+++ b/src/Makefile
@@ -1,7 +1,7 @@
 CC=g++
 CFLAGS=-c -Wall -std=c++20
 LDFLAGS=
-LIBFLAGS=-lsfml-graphics -lsfml-window -lsfml-system
+LIBFLAGS=-lsfml-graphics -lsfml-window -lsfml-system -lsfml-audio
 SOURCES=WS4.cpp gfx_init.cpp data_proc.cpp
 OBJECTS=$(SOURCES:.cpp=.o)
 EXECUTABLE=WS4
